--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 
 
 
+    <div id="omer" class="p">this <span>websits</span> </div>
+    <div id="dd">testing</div>
+
 
     <script src="main.js"></script>
 </body>
